--- a/index.html
+++ b/index.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ranas</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Ranas</h1>
+        <ul>
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./gallery.html">Galeria</a></li>
+        </ul>
+    </header>
+    <main>
+        <p>Esta es una página simple que tiene una mini galeria de ranas</p>
+    </main>
+    <footer>
+        <p>©Andrés P.</p>
+    </footer>
 </body>
 </html>
