primer draft de galeria

--- a/gallery.html
+++ b/gallery.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=git add ., initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <header>
@@ -14,8 +15,16 @@
             <li><a href="./gallery.html">Galeria</a></li>
         </ul>
     </header>
-    <main>
-        
+    <main class="gallery">
+        <img class="frogFancy" src="./assets/images/Fancyfrog.png" alt="Fancy">
+        <img class="frogKing" src="./assets/images/Kingfrog.png" alt="King">
+        <img class="frogMage" src="./assets/images/Magefrog.png" alt="Mage">
+        <img class="frogMagic" src="./assets/images/Magicfrog.png" alt="Magic">
+        <video class="frogVideo" controls autoplay mute src="./assets/videos/Ranas.mp4"></video>
+        <img class="frogMagician" src="./assets/images/Magicianfrog.png" alt="Magician">
+        <img class="frogParty" src="./assets/images/Partyfrog.png" alt="Party">
+        <img class="frogWealthy" src="./assets/images/Wealthyfrog.png" alt="Wealthy">
+        <img class="frogWitch" src="./assets/images/Witchfrog.png" alt="Witch">
     </main>
     <footer>
         <p>©Andrés P.</p>
