--- a/gallery.html
+++ b/gallery.html
@@ -16,7 +16,7 @@
         </ul>
     </header>
     <main class="gallery">
-        <img class="frogFancy" src="./assets/images/Fancyfrog.png" alt="Fancy">
+        <img class="frogFancy" src="/assets/images/Fancyfrog.png" alt="Fancy">
         <img class="frogKing" src="./assets/images/Kingfrog.png" alt="King">
         <img class="frogMage" src="./assets/images/Magefrog.png" alt="Mage">
         <img class="frogMagic" src="./assets/images/Magicfrog.png" alt="Magic">
