--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
     <main>
         <p>Esta es una página simple que tiene una mini galeria de ranas</p>
         <p>Aca solo escribo mas texto para hacer un commit, imaginense que son datos de ranas</p>
+        <img src="/assets/images/Kingfrog.png" alt="">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium inventore eveniet laborum distinctio facilis dolorum ut cupiditate, veritatis delectus ipsa dicta animi et culpa nihil sint! Dolorem neque cupiditate velit.</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium inventore eveniet laborum distinctio facilis dolorum ut cupiditate, veritatis delectus ipsa dicta animi et culpa nihil sint! Dolorem neque cupiditate velit.</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium inventore eveniet laborum distinctio facilis dolorum ut cupiditate, veritatis delectus ipsa dicta animi et culpa nihil sint! Dolorem neque cupiditate velit.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium inventore eveniet laborum distinctio facilis dolorum ut cupiditate, veritatis delectus ipsa dicta animi et culpa nihil sint! Dolorem neque cupiditate velit.</p>
+        
     </main>
     <footer>
         <p>©Andrés P.</p>
