--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <main>
         <p>Esta es una página simple que tiene una mini galeria de ranas</p>
         <p>Aca solo escribo mas texto para hacer un commit, imaginense que son datos de ranas</p>
-        <img src="/assets/images/kingfrog.png" alt="Se rompio">
+        <img src="/assets/images/kgit addingfrog.png" alt="Se rompio">
     </main>
     <footer>
         <p>©Andrés P.</p>
